--- a/DesctopHITE/AppDateFolder/StyleFolder/ListViewDictionary.xaml
+++ b/DesctopHITE/AppDateFolder/StyleFolder/ListViewDictionary.xaml
@@ -32,12 +32,12 @@
                             <Setter TargetName="border" Property="Background">
                                 <Setter.Value>
                                     <RadialGradientBrush SpreadMethod="Reflect" ColorInterpolationMode="SRgbLinearInterpolation" MappingMode="Absolute">
-                                        <GradientStop Color="#462AD8" Offset="1"/>
-                                        <GradientStop Color="#6b55e0"/>
+                                        <GradientStop Color="#19462AD8" Offset="1"/>
+                                        <GradientStop Color="#196B55E0"/>
                                     </RadialGradientBrush>
                                 </Setter.Value>
                             </Setter>
-                            <Setter TargetName="border" Property="BorderBrush" Value="#f5f5f5"/>
+                            <Setter TargetName="border" Property="BorderBrush" Value="#462AD8"/>
                             <Setter TargetName="border" Property="BorderThickness" Value="1"/>
                         </Trigger>
                     </ControlTemplate.Triggers>
