--- a/DesctopHITE/AppDateFolder/StyleFolder/BorderDictionary.xaml
+++ b/DesctopHITE/AppDateFolder/StyleFolder/BorderDictionary.xaml
@@ -1,12 +1,16 @@
-﻿<ResourceDictionary 
+﻿<!--В данном файле находится код для стиля пользовательского элемента управления Border-->
+
+<ResourceDictionary 
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+    
     <Style x:Key="MainBorderStyle" TargetType="Border">
         <Setter Property="Background" Value="#121212"/>
         <Setter Property="BorderBrush" Value="Transparent"/>
         <Setter Property="BorderThickness" Value="0"/>
         <Setter Property="CornerRadius" Value="10"/>
     </Style>
+    
     <Style x:Key="ShadowBorder" TargetType="Border">
         <Setter Property="Height" Value="45"/>
         <Setter Property="Opacity" Value="0.6"/>
@@ -15,11 +19,13 @@
         <Setter Property="BorderThickness" Value="0"/>
         <Setter Property="CornerRadius" Value="10"/>
     </Style>
+    
     <Style x:Key="OtherShadowBorder" TargetType="Border" BasedOn="{StaticResource MainBorderStyle}">
         <Setter Property="Height" Value="Auto"/>
         <Setter Property="MinHeight" Value="45"/>
         <Setter Property="MaxHeight" Value="250"/>
     </Style>
+    
     <Style x:Key="BorderInformation" TargetType="Border">
         <Setter Property="Background" Value="Transparent"/>
         <Setter Property="BorderBrush" Value="#f5f5f5"/>
@@ -28,10 +34,12 @@
         <Setter Property="Visibility" Value="Collapsed"/>
         <Setter Property="Margin" Value="0 10 0 10"/>
     </Style>
+    
     <Style x:Key="MaskBorder" TargetType="Border">
         <Setter Property="VerticalAlignment" Value="Center"/>
         <Setter Property="HorizontalAlignment" Value="Center"/>
         <Setter Property="Opacity" Value="1"/>
         <Setter Property="BorderBrush" Value="#121212"/>
     </Style>
+    
 </ResourceDictionary>
