--- a/DesctopHITE/AppDateFolder/StyleFolder/ButtonDictionary.xaml
+++ b/DesctopHITE/AppDateFolder/StyleFolder/ButtonDictionary.xaml
@@ -1,6 +1,9 @@
-﻿<ResourceDictionary 
+﻿<!--В данном файле находится код для стиля пользовательского элемента управления Button-->
+    
+<ResourceDictionary 
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+    
     <Style TargetType="Button">
         <Setter Property="BorderThickness" Value="0"/>
         <Setter Property="BorderBrush" Value="Transparent"/>
@@ -32,6 +35,7 @@
             </Setter.Value>
         </Setter>
     </Style>
+    
     <Style TargetType="Button" x:Key="OtherButtonStyle">
         <Setter Property="BorderThickness" Value="1"/>
         <Setter Property="BorderBrush" Value="#f5f5f5"/>
@@ -63,6 +67,7 @@
             </Setter.Value>
         </Setter>
     </Style>
+    
     <Style x:Key="PasswordButtonStyle" TargetType="Button">
         <Setter Property="Background" Value="Transparent"/>
         <Setter Property="BorderBrush" Value="Transparent"/>
@@ -94,6 +99,7 @@
             </Setter.Value>
         </Setter>
     </Style>
+    
     <Style TargetType="Button" x:Key="DeliteButtonStyle">
         <Setter Property="BorderThickness" Value="0"/>
         <Setter Property="BorderBrush" Value="Transparent"/>
@@ -125,6 +131,7 @@
             </Setter.Value>
         </Setter>
     </Style>
+    
     <!--#region ControlPanel-->
     <Style x:Key="ControlPanelButtonStyle" TargetType="Button" >
         <Setter Property="Background" Value="Transparent"/>
@@ -137,6 +144,7 @@
         <Setter Property="BorderThickness" Value="0"/>
         <Setter Property="FontFamily" Value="Global User Interface"/>
     </Style>
+    
     <Style TargetType="Button" x:Key="RollupControlButton" BasedOn="{StaticResource ControlPanelButtonStyle}">
         <Setter Property="Content" Value="—"/>
         <Setter Property="ToolTip" Value="СВЕРНУТЬ"/>
@@ -160,6 +168,7 @@
             </Setter.Value>
         </Setter>
     </Style>
+    
     <Style TargetType="Button" x:Key="CloseControlButton" BasedOn="{StaticResource ControlPanelButtonStyle}">
         <Setter Property="Content" Value="✕"/>
         <Setter Property="ToolTip" Value="ЗАКРЫТЬ"/>
@@ -183,4 +192,5 @@
         </Setter>
     </Style>
     <!--#endregion-->
+    
 </ResourceDictionary>
