--- a/DesctopHITE/AppDateFolder/StyleFolder/ColorDictionary.xaml
+++ b/DesctopHITE/AppDateFolder/StyleFolder/ColorDictionary.xaml
@@ -1,6 +1,10 @@
-﻿<ResourceDictionary 
+﻿<!--В данном файле находится код привязки цвета-->
+    
+<ResourceDictionary 
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+    
     <Color x:Key="ShadowColor">#000000</Color>
     <SolidColorBrush x:Key="ShadowSolidColorBrush" Color="{DynamicResource ShadowColor}"/>
+    
 </ResourceDictionary>
