--- a/DesctopHITE/AppDateFolder/StyleFolder/ComboBoxDictionary.xaml
+++ b/DesctopHITE/AppDateFolder/StyleFolder/ComboBoxDictionary.xaml
@@ -1,6 +1,9 @@
-﻿<ResourceDictionary
+﻿<!--В данном файле находится код для стиля пользовательского элемента управления ComboBox-->
+    
+<ResourceDictionary
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+    
     <ControlTemplate x:Key="ComboBoxToggleButton" TargetType="{x:Type ToggleButton}">
         <Grid>
             <Grid.ColumnDefinitions>
@@ -33,6 +36,7 @@
     <ControlTemplate x:Key="ComboBoxTextBox" TargetType="{x:Type TextBox}">
         <Border x:Name="PART_ContentHost" Focusable="False" CornerRadius="0 0 10 10" Background="{TemplateBinding Background}" />
     </ControlTemplate>
+    
     <Style x:Key="{x:Type ComboBox}" TargetType="{x:Type ComboBox}">
         <Setter Property="SnapsToDevicePixels" Value="true"/>
         <Setter Property="OverridesDefaultStyle" Value="true"/>
@@ -128,6 +132,7 @@
         <Style.Triggers>
         </Style.Triggers>
     </Style>
+    
     <Style x:Key="{x:Type ComboBoxItem}" TargetType="{x:Type ComboBoxItem}">
         <Setter Property="SnapsToDevicePixels" Value="true"/>
         <Setter Property="Foreground" Value="#f5f5f5"/>
@@ -158,4 +163,5 @@
             </Setter.Value>
         </Setter>
     </Style>
+    
 </ResourceDictionary>
