--- a/DesctopHITE/AppDateFolder/StyleFolder/HyperlinkDictionary.xaml
+++ b/DesctopHITE/AppDateFolder/StyleFolder/HyperlinkDictionary.xaml
@@ -1,10 +1,14 @@
-﻿<ResourceDictionary 
+﻿<!--В данном файле находится код для стиля пользовательского элемента управления Hyperlink-->
+    
+<ResourceDictionary 
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+    
     <Style TargetType="Hyperlink" x:Key="Hyperlink">
         <Setter Property="Foreground" Value="#fff"/>
         <Setter Property="FontFamily" Value="Consolas"/>
         <Setter Property="FontSize" Value="20"/>
         <Setter Property="TextDecorations" Value="None"/>
     </Style>
+    
 </ResourceDictionary>
