--- a/DesctopHITE/AppDateFolder/StyleFolder/ImageDictionary.xaml
+++ b/DesctopHITE/AppDateFolder/StyleFolder/ImageDictionary.xaml
@@ -1,8 +1,12 @@
-﻿<ResourceDictionary
+﻿<!--В данном файле находится код для стиля пользовательского элемента управления Image-->
+    
+<ResourceDictionary
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+    
     <Style x:Key="QrImage" TargetType="Image">
         <Setter Property="Width" Value="350"/>
         <Setter Property="Height" Value="350"/>
     </Style>
+    
 </ResourceDictionary>
