--- a/DesctopHITE/AppDateFolder/StyleFolder/PasswordBoxDictionary.xaml
+++ b/DesctopHITE/AppDateFolder/StyleFolder/PasswordBoxDictionary.xaml
@@ -1,6 +1,9 @@
-﻿<ResourceDictionary 
+﻿<!--В данном файле находится код для стиля пользовательского элемента управления PasswordBox-->
+    
+<ResourceDictionary 
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+    
     <Style x:Key="MainPasswordBoxStyle" TargetType="PasswordBox">
         <Setter Property="Foreground" Value="#FFFFFF"/>
         <Setter Property="Background" Value="#202020"/>
@@ -47,4 +50,5 @@
             </Setter.Value>
         </Setter>
     </Style>
+    
 </ResourceDictionary>
