--- a/DesctopHITE/AppDateFolder/StyleFolder/TextBlockDictionary.xaml
+++ b/DesctopHITE/AppDateFolder/StyleFolder/TextBlockDictionary.xaml
@@ -1,6 +1,9 @@
-﻿<ResourceDictionary 
+﻿<!--В данном файле находится код для стиля пользовательского элемента управления TextBlock-->
+    
+<ResourceDictionary 
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+    
     <Style x:Key="ControlPanelTextBlockStyle" TargetType="TextBlock">
         <Setter Property="Foreground" Value="#f5f5f5"/>
         <Setter Property="FontFamily" Value="Consolas"/>
@@ -8,6 +11,7 @@
         <Setter Property="VerticalAlignment" Value="Center"/>
         <Setter Property="HorizontalAlignment" Value="Center"/>
     </Style>
+    
     <Style x:Key="IconTextBlockStyle" TargetType="TextBlock">
         <Setter Property="Foreground" Value="#f5f5f5"/>
         <Setter Property="FontFamily" Value="\ContentFolder\FontFolder\#Material-Design-Iconic-Font"/>
@@ -17,6 +21,7 @@
         <Setter Property="IsHitTestVisible" Value="False"/>
         <Setter Property="Margin" Value="10 0 0 0"/>
     </Style>
+    
     <Style x:Key="IconButtonTextBlockStyle" TargetType="TextBlock">
         <Setter Property="FontFamily" Value="\ContentFolder\FontFolder\#Material-Design-Iconic-Font"/>
         <Setter Property="VerticalAlignment" Value="Center"/>
@@ -24,6 +29,7 @@
         <Setter Property="IsHitTestVisible" Value="False"/>
         <Setter Property="Margin" Value="0 0 0 0"/>
     </Style>
+    
     <Style x:Key="HintTextBlockStyle" TargetType="TextBlock">
         <Setter Property="Foreground" Value="#8c8a8c"/>
         <Setter Property="FontFamily" Value="\ContentFolder\FontFolder\#Comfortaa"/>
@@ -37,6 +43,7 @@
         <Setter Property="HorizontalAlignment" Value="Left"/>
         <Setter Property="IsHitTestVisible" Value="False"/>
     </Style>
+    
     <Style x:Key="MainStyleTextBlock" TargetType="TextBlock">
         <Setter Property="Foreground" Value="#f5f5f5"/>
         <Setter Property="FontFamily" Value="\ContentFolder\FontFolder\#Comfortaa"/>
@@ -46,8 +53,10 @@
         <Setter Property="FontSize" Value="15"/>
         <Setter Property="VerticalAlignment" Value="Center"/>
     </Style>
+    
     <Style x:Key="TextBlockDominatesTextBoxTextBlock" TargetType="TextBlock" BasedOn="{StaticResource MainStyleTextBlock}">
         <Setter Property="Margin" Value="12 0 0 0"/>
         <Setter Property="HorizontalAlignment" Value="Left"/>
     </Style>
+    
 </ResourceDictionary>
