--- a/DesctopHITE/AppDateFolder/StyleFolder/TextBoxDictionary.xaml
+++ b/DesctopHITE/AppDateFolder/StyleFolder/TextBoxDictionary.xaml
@@ -1,6 +1,9 @@
-﻿<ResourceDictionary 
+﻿<!--В данном файле находится код для стиля пользовательского элемента управления TextBox-->
+    
+<ResourceDictionary 
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+    
     <Style x:Key="MainTextBoxStyle" TargetType="TextBox">
         <Setter Property="Foreground" Value="#f5f5f5"/>
         <Setter Property="Background" Value="#202020"/>
@@ -46,6 +49,7 @@
             </Setter.Value>
         </Setter>
     </Style>
+    
     <Style x:Key="OtherTextBoxStyle" TargetType="TextBox" BasedOn="{StaticResource MainTextBoxStyle}">
         <Setter Property="Height" Value="Auto"/>
         <Setter Property="MinHeight" Value="45"/>
