--- a/DesctopHITE/AppDateFolder/StyleFolder/ToggleButtonDictionary.xaml
+++ b/DesctopHITE/AppDateFolder/StyleFolder/ToggleButtonDictionary.xaml
@@ -1,8 +1,11 @@
-﻿<ResourceDictionary 
+﻿<!--В данном файле находится код для стиля пользовательского элемента управления ToggleButton-->
+    
+<ResourceDictionary 
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+
     <Style x:Key="MainMenuToggleButtonStyle" TargetType="ToggleButton">
-        <Setter Property="Background" Value="Transparent"/> 
+        <Setter Property="Background" Value="Transparent"/>
         <Setter Property="BorderBrush" Value="Transparent"/>
         <Setter Property="Foreground" Value="#9a9a9a"/>
         <Setter Property="VerticalAlignment" Value="Center"/>
@@ -12,8 +15,8 @@
         <Setter Property="Width" Value="246"/>
         <Setter Property="Height" Value="70"/>
         <Setter Property="BorderThickness" Value="0"/>
-        <Setter Property="Cursor" Value="Hand"/> 
-        <Setter Property="Margin" Value="0 1.5 0 1.5"/> 
+        <Setter Property="Cursor" Value="Hand"/>
+        <Setter Property="Margin" Value="0 1.5 0 1.5"/>
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="ToggleButton">
@@ -36,6 +39,7 @@
             </Setter.Value>
         </Setter>
     </Style>
+
     <Style x:Key="OtherMenuToggleButtonStyle" TargetType="ToggleButton" BasedOn="{StaticResource MainMenuToggleButtonStyle}">
         <Setter Property="Margin" Value="1.5 0 1.5 0"/>
         <Setter Property="Template">
@@ -58,4 +62,5 @@
             </Setter.Value>
         </Setter>
     </Style>
+
 </ResourceDictionary>
