--- a/DesctopHITE/AppDateFolder/StyleFolder/WindowsDictionary.xaml
+++ b/DesctopHITE/AppDateFolder/StyleFolder/WindowsDictionary.xaml
@@ -1,6 +1,9 @@
-﻿<ResourceDictionary 
+﻿<!--В данном файле находится код для стиля пользовательского элемента управления Window-->
+    
+<ResourceDictionary 
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+
     <Style x:Key="MainWinwosStyle" TargetType="Window">
         <Setter Property="WindowStyle" Value="None"/>
         <Setter Property="Icon" Value="\ContentFolder\ImageFolder\Icon_DesctopHITE.png"/>
@@ -12,12 +15,15 @@
         <Setter Property="Height" Value="900"/>
         <Setter Property="Width" Value="1600"/>
     </Style>
+
     <Style x:Key="AuthorizationWindowStyle" TargetType="Window" BasedOn="{StaticResource MainWinwosStyle}">
         <Setter Property="Height" Value="450"/>
         <Setter Property="Width" Value="800"/>
     </Style>
+
     <Style x:Key="TestWindowStyle" TargetType="Window" BasedOn="{StaticResource MainWinwosStyle}">
         <Setter Property="Height" Value="270"/>
         <Setter Property="Width" Value="480"/>
     </Style>
+    
 </ResourceDictionary>
