--- a/DesctopHITE/PerformanceFolder/PageFolder/WorkerPageFolder/NewWorkerPage.xaml
+++ b/DesctopHITE/PerformanceFolder/PageFolder/WorkerPageFolder/NewWorkerPage.xaml
@@ -1301,9 +1301,20 @@
                         <Button
                             x:Name="NewWorkerButton"
                             Click="NewWorkerButton_Click"
-                            Width="320"
-                            Height="50"
-                            Content="Добавить нового сотрудника"/>
+                            Width="350"
+                            Height="50">
+                            <StackPanel Orientation="Horizontal">
+                                <TextBlock
+                                    x:Name="TitleIconNewWorkerTextBlock"
+                                    Text="&#xf1ff;" 
+                                    Style="{DynamicResource IconTextBlockStyle}"
+                                    Margin="0 0 5 0"/>
+                                <TextBlock
+                                    x:Name="TitleTextNewWorkerTextBlock"
+                                    Margin="5 0 0 0"
+                                    Text="Добавить нового сотрудника"/>
+                            </StackPanel>
+                        </Button>
                     </Grid>
                 </Border>    
             </StackPanel>
