--- a/DesctopHITE/PerformanceFolder/PageFolder/UserPageFolder/MainPage.xaml
+++ b/DesctopHITE/PerformanceFolder/PageFolder/UserPageFolder/MainPage.xaml
@@ -8,95 +8,76 @@
     mc:Ignorable="d" 
     IsVisibleChanged="Page_IsVisibleChanged"
     Style="{DynamicResource MainUserPageStyle}">
-    <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="auto"/>
-            <RowDefinition Height="*"/>
-        </Grid.RowDefinitions>
-        <Border 
-            MinHeight="0" 
-            MaxHeight="295" 
-            Height="auto" 
-            VerticalAlignment="Top"
-            HorizontalAlignment="Right" 
-            Margin="5"
-            BorderBrush="#462AD8" 
-            Visibility="Visible" 
-            Style="{DynamicResource BorderInformation}">
-            <StackPanel Margin="5 10" Orientation="Vertical" VerticalAlignment="Center">
-                <TextBlock
-                    Text="Loading..."
-                    Padding="10 5"
-                    Background="#462AD8"
-                    TextAlignment="Center"
-                    x:Name="HelloyTextBlock"
-                    Style="{DynamicResource MainStyleTextBlock}"
-                    Margin="0 0 0 2.5"/>
-                <TextBlock
-                    Width="350"
-                    HorizontalAlignment="Center"
-                    TextAlignment="Center"
-                    x:Name="NowTimeTextBlock"
-                    Style="{DynamicResource MainStyleTextBlock}"
-                    FontSize="60"
-                    FontFamily="\ContentFolder\FontFolder\#DM Mono Medium"
-                    Margin="0 2.5 0 2.5"/>
-                <TextBlock
-                    Margin="0 2.5 0 0"
-                    HorizontalAlignment="Center"
-                    TextAlignment="Center"
-                    x:Name="NowDateTextBlock"
-                    Style="{DynamicResource MainStyleTextBlock}"
-                    FontSize="25"/>
-                <TextBlock
-                    Margin="0 2 0 2"
-                    HorizontalAlignment="Center"
-                    TextAlignment="Center"
-                    x:Name="BirthdayTextBlock"
-                    Style="{DynamicResource MainStyleTextBlock}"
-                    FontSize="25"/>
-                <TextBlock
-                    Margin="0 2 0 0"
-                    HorizontalAlignment="Center"
-                    TextAlignment="Center"
-                    x:Name="NowHolidayTextBlock"
-                    Style="{DynamicResource MainStyleTextBlock}"
-                    FontSize="20"/>
-            </StackPanel>
-        </Border>
-        <Border
-            VerticalAlignment="Top"
-            x:Name="TitleTodayTheBirthdayBorder"
-            BorderBrush="#202020" 
-            Style="{DynamicResource BorderInformation}"
-            Margin="5"
-            HorizontalAlignment="Left"
-            Width="450"
-            Height="auto"
-            MinHeight="0"
-            MaxHeight="295">
-            <StackPanel Orientation="Vertical">
-                <TextBlock 
-                    Margin="0 5 0 2.5"
-                    x:Name="TitleTodayTheBirthdayTextBlock"
-                    FontSize="15"
-                    Style="{DynamicResource MainStyleTextBlock}"/>
-                <ListView
-                    MinHeight="0"
-                    MaxHeight="260"
-                    Height="auto"
-                    Margin="5 2.5 5 5"
-                    Width="435"
-                    ItemContainerStyle="{StaticResource ListViewItemSelected}"
-                    Background="Transparent"
-                    x:Name="EmployeesWhoHaveBirthdayToday">
-                    <ListView.ItemTemplate>
-                        <DataTemplate>
-                            <UserControl:ListWorkerBirthdayControl/>
-                        </DataTemplate>
-                    </ListView.ItemTemplate>
-                </ListView>
-            </StackPanel>
-        </Border>
-    </Grid>
+    <StackPanel Orientation="Vertical" VerticalAlignment="Center" HorizontalAlignment="Center">
+        <StackPanel Orientation="Vertical" Margin="0 0 0 80">
+            <TextBlock
+                Text="HTRE"
+                Margin="0 0 0 0"
+                FontSize="200"
+                Style="{StaticResource MainStyleTextBlock}"
+                FontFamily="\ContentFolder\FontFolder\#Rubik Wet Paint">
+                <TextBlock.Foreground>
+                    <LinearGradientBrush EndPoint="0.45,1" StartPoint="0.5,0">
+                        <GradientStop Color="#f5f5f5"/>
+                        <GradientStop Color="#462AD8" Offset="1"/>
+                    </LinearGradientBrush>
+                </TextBlock.Foreground>
+            </TextBlock>
+            <TextBlock
+                Text="Вкусно / Быстро \ По дороге"
+                Margin="0 0 0 0"
+                FontSize="30"
+                Style="{StaticResource MainStyleTextBlock}"
+                FontFamily="\ContentFolder\FontFolder\#Rubik Wet Paint"
+                Foreground="#462AD8"/>
+        </StackPanel>
+        <StackPanel Margin="0 80 0 0" Orientation="Vertical" VerticalAlignment="Center">
+            <TextBlock
+                Text="Loading..."
+                Padding="10 5"
+                FontSize="25"
+                Background="#462AD8"
+                TextAlignment="Center"
+                x:Name="HelloyTextBlock"
+                Style="{DynamicResource MainStyleTextBlock}"
+                Margin="0 0 0 2.5"/>
+            <TextBlock
+                Width="350"
+                HorizontalAlignment="Center"
+                TextAlignment="Center"
+                x:Name="NowTimeTextBlock"
+                Style="{DynamicResource MainStyleTextBlock}"
+                FontSize="60"
+                FontFamily="\ContentFolder\FontFolder\#DM Mono Medium"
+                Margin="0 2.5 0 2.5"/>
+            <TextBlock
+                Margin="0 2.5 0 0"
+                HorizontalAlignment="Center"
+                TextAlignment="Center"
+                x:Name="DayOfTheWeekTextBlock"
+                Style="{DynamicResource MainStyleTextBlock}"
+                FontSize="20"/>
+            <TextBlock
+                Margin="0 2.5 0 2"
+                HorizontalAlignment="Center"
+                TextAlignment="Center"
+                x:Name="NowDateTextBlock"
+                Style="{DynamicResource MainStyleTextBlock}"
+                FontSize="20"/>
+            <TextBlock
+                Margin="0 2 0 2"
+                HorizontalAlignment="Center"
+                TextAlignment="Center"
+                x:Name="BirthdayTextBlock"
+                Style="{DynamicResource MainStyleTextBlock}"
+                FontSize="25"/>
+            <TextBlock
+                Margin="0 2 0 0"
+                HorizontalAlignment="Center"
+                TextAlignment="Center"
+                x:Name="NowHolidayTextBlock"
+                Style="{DynamicResource MainStyleTextBlock}"
+                FontSize="20"/>
+        </StackPanel>
+    </StackPanel>
 </Page>
