--- a/DesctopHITE/PerformanceFolder/WindowsFolder/AuthorizationWindow.xaml
+++ b/DesctopHITE/PerformanceFolder/WindowsFolder/AuthorizationWindow.xaml
@@ -60,7 +60,7 @@
                     <StackPanel Orientation="Vertical" VerticalAlignment="Center" HorizontalAlignment="Center">
                         <TextBlock
                             Text="HTRE"
-                            Margin="0 0 0 20"
+                            Margin="0 0 0 0"
                             FontSize="100"
                             Style="{StaticResource MainStyleTextBlock}"
                             FontFamily="\ContentFolder\FontFolder\#Rubik Wet Paint">
@@ -71,6 +71,13 @@
                                 </LinearGradientBrush>
                             </TextBlock.Foreground>
                         </TextBlock>
+                        <TextBlock
+                            Text="Вкусно / Быстро \ По дороге"
+                            Margin="0 0 0 20"
+                            FontSize="15"
+                            Style="{StaticResource MainStyleTextBlock}"
+                            FontFamily="\ContentFolder\FontFolder\#Rubik Wet Paint"
+                            Foreground="#462AD8"/>
                         <Grid Margin="0 20 0 10">
                             <Border Style="{DynamicResource ShadowBorder}">
                                 <Border.Effect>
